--- a/src/form.html
+++ b/src/form.html
@@ -10,8 +10,9 @@
 
 
 
-        <div id="carSelected"></div>
-        <p id="back">< Powrót </p>
-      
+        <div id="form_car"></div>
+        <button id="car-buy">kup</button>
+        <p id="back"><< Powrót </p>
+
     </body>
 </html>
