--- a/src/form.html
+++ b/src/form.html
@@ -8,11 +8,39 @@
     </head>
     <body>
 
+        <div id="carForm">bbbb</div>
+        <form >
+            <input type="radio" name="radio" value="leasing" />
+            <label>Leasing</label>
+            <input type="radio" name="radio" value="cash" />
+            <label>Gotówka</label>
+        </form>
 
+        <form >
+            <label>Imię i Nazwisko</label>
+            <input type="text" name="name" placeholder="Imię i Nazwisko" id="nameForm" />
+            <div id="info1"></div>
+            <label>Miejsce odbioru</label>
+            <input type="text" name="city" placeholder="Miejscowość" id="city" />
+            <div id="info2"></div>
+            <label>Data odbioru</label>
+            <select name="select">
+                <option>data</option>
+            </select>
+        </form>
 
-        <div id="form_car"></div>
-        <button id="car-buy">kup</button>
-        <p id="back"><< Powrót </p>
+<div>
+    <h2 class="description">Aksesoria</h2>
+    <select name="multiple" multiple="multiple">
+        <option>Opcja a</option>
+        <option>Opcja b</option>
+        <option>Opcja c</option>
+        <option>Opcja d</option>
+        <option>Opcja e</option>
+    </select>
+</div>
 
+        <button id="car-buy-final">kup</button>
+        <p id="back"><< Powrót</p>
     </body>
 </html>
