--- a/src/header.html
+++ b/src/header.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav id="topNav">
-            <div class="topNavMargin">
-                
-                <div class="navbar">
-                    <a href="index.html"><img class="logo" src="./assets/image/logo_black.svg" alt="market Car"></a>
-            <!--<button>zwijane nav</button>-->
-                </div>
-                <div class="nav_item">
-                        <a href="#">Kup</a>
-                        <a href="#">Sprzedaj</a>
-                        <a href="#">O nas</a>
-                        <a href="#">Kontakt</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <div class="topNavMargin">
+                    <div class="navResp" >
+                        <a href="index.html"
+                            ><img class="logo" src="./assets/image/logo_black.svg" alt="market Car"
+                        /></a>
+                    </div>
+                    <!-- <span class="space"></span> -->
+                    <div class="nav_item" id="topNav">
+                        <a href="javascript:void(0);" class="icon"
+                        ><img src="./assets/image/icon.svg"
+                    /></a>
+                        <a class="padding_resp navFirst" href="#">Kup</a>
+                        <a class="padding_resp" href="#">Sprzedaj</a>
+                        <a class="padding_resp" href="#">O nas</a>
+                        <a class="padding_resp" href="#">Kontakt</a>
 
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-</body>
+            </nav>
+        </header>
+    </body>
 </html>
